--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,6 +9,7 @@
     <script src="js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="css/community.css">
 </head>
 <body>
 <nav class="navbar navbar-default">
@@ -30,6 +31,9 @@
                 </div>
                 <button type="submit" class="btn btn-default">検索</button>
             </form>
+            <li th:if="${session.user!=null}">
+            <a href="/publish">質問する</a>
+            </li>
             <ul class="nav navbar-nav navbar-right">
                 <li class="dropdown" th:if="${session.user!=null}">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
@@ -47,5 +51,27 @@
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
 </nav>
+<div class="container-fluid main">
+    <div class="row">
+        <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12 ">
+            <h2><span class="glyphicon glyphicon-list" aria-hidden="true"></span> 発見</h2>
+            <hr>
+            <div class="media">
+                <div class="media-left">
+                    <a href="#">
+                        <img class="media-object img-rounded" src="https://avatars.githubusercontent.com/u/80101616?v=4">
+                    </a>
+                </div>
+                <div class="media-body">
+                    <h4 class="media-heading">Spring Boot</h4>
+                    Spring Bootについて<br>
+                    <span class="text-desc">11 个回复 • 1693 次浏览 • 2021-01-10 04:22</span>
+                </div>
+            </div>
+        </div>
+        <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12 ">
+        </div>
+    </div>
+</div>
 </body>
 </html>
