--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -31,10 +31,10 @@
                 </div>
                 <button type="submit" class="btn btn-default">検索</button>
             </form>
-            <li th:if="${session.user!=null}">
-            <a href="/publish">質問する</a>
-            </li>
             <ul class="nav navbar-nav navbar-right">
+                <li th:if="${session.user!=null}">
+                    <a href="/publish"><span>質問する</span></a>
+                </li>
                 <li class="dropdown" th:if="${session.user!=null}">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                        aria-expanded="false" th:text="${session.user.getName()}"><span class="caret"></span></a>
@@ -45,8 +45,8 @@
                     </ul>
                 </li>
                 <li th:if="${session.user==null}">
-                    <a href="https://github.com/login/oauth/authorize?client_id=115285b7216b4c2397a1&redirect_uri=http://localhost:8080/callback&scope=user&state=1">ログイン</a>
-                </li>
+                <a href="https://github.com/login/oauth/authorize?client_id=115285b7216b4c2397a1&redirect_uri=http://localhost:8080/callback&scope=user&state=1">ログイン</a>
+            </li>
             </ul>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
@@ -56,16 +56,16 @@
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12 ">
             <h2><span class="glyphicon glyphicon-list" aria-hidden="true"></span> 発見</h2>
             <hr>
-            <div class="media">
+            <div class="media" th:each="question:${questionList}">
                 <div class="media-left">
                     <a href="#">
-                        <img class="media-object img-rounded" src="https://avatars.githubusercontent.com/u/80101616?v=4">
+                        <img class="media-object img-rounded" th:src="${question.user.avatarUrl}">
                     </a>
                 </div>
                 <div class="media-body">
-                    <h4 class="media-heading">Spring Boot</h4>
-                    Spring Bootについて<br>
-                    <span class="text-desc">11 个回复 • 1693 次浏览 • 2021-01-10 04:22</span>
+                    <h4 class="media-heading" th:text="${question.title}" ></h4>
+                    <span th:text="${question.description}"></span><br>
+                    <span class="text-desc">[[${question.commentCount}]]件返事• [[${question.viewCount}]] 回ブラウズ • [[${#dates.format(question.gmtCreate,'yyyy-MM-dd HH:mm')}]]</span>
                 </div>
             </div>
         </div>
