--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -31,10 +31,11 @@
                 </div>
                 <button type="submit" class="btn btn-default">検索</button>
             </form>
-            <li th:if="${session.user!=null}">
-                <a href="/publish">質問する</a>
-            </li>
             <ul class="nav navbar-nav navbar-right">
+                <li class="dropdown" th:if="${session.user!=null}">
+                    <a href="/publish" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                       aria-expanded="false">質問する</a>
+                </li>
                 <li class="dropdown" th:if="${session.user!=null}">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                        aria-expanded="false" th:text="${session.user.getName()}"><span class="caret"></span></a>
@@ -59,15 +60,18 @@
             <form action="/publish" method="post">
                 <div class="form-group">
                     <label for="title">タイトル(概要)：</label>
-                    <input type="text" id="title" name="title" class="form-control"  placeholder="質問タイトル" th:value="${title}">
+                    <input type="text" id="title" name="title" class="form-control" placeholder="質問タイトル"
+                           th:value="${title}">
                 </div>
                 <div class="form-group">
                     <label for="description">質問内容(必須、右側のガイドを参照)：</label>
-                    <textarea id="description" name="description" class="form-control" cols="30" rows="10" th:value="${description}"></textarea>
+                    <textarea id="description" name="description" class="form-control" cols="30" rows="10"
+                              th:text="${description}"></textarea>
                 </div>
                 <div class="form-group">
                     <label for="tag">タグ：</label>
-                    <input type="text" id="tag" name="tag" class="form-control"  placeholder="タグを入力してください。" th:value="${tag}">
+                    <input type="text" id="tag" name="tag" class="form-control" placeholder="タグを入力してください。"
+                           th:value="${tag}">
                 </div>
                 <div th:if="${error}!=null">
                     <span class="alert alert-danger" role="alert" th:text="${error}"></span>
