--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -45,8 +45,8 @@
                     </ul>
                 </li>
                 <li th:if="${session.user==null}">
-                <a href="https://github.com/login/oauth/authorize?client_id=115285b7216b4c2397a1&redirect_uri=http://localhost:8080/callback&scope=user&state=1">ログイン</a>
-            </li>
+                    <a href="https://github.com/login/oauth/authorize?client_id=115285b7216b4c2397a1&redirect_uri=http://localhost:8080/callback&scope=user&state=1">ログイン</a>
+                </li>
             </ul>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
@@ -56,18 +56,50 @@
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12 ">
             <h2><span class="glyphicon glyphicon-list" aria-hidden="true"></span> 発見</h2>
             <hr>
-            <div class="media" th:each="question:${questionList}">
+            <div class="media" th:each="question:${questionList.data}">
                 <div class="media-left">
                     <a href="#">
                         <img class="media-object img-rounded" th:src="${question.user.avatarUrl}">
                     </a>
                 </div>
                 <div class="media-body">
-                    <h4 class="media-heading" th:text="${question.title}" ></h4>
+                    <h4 class="media-heading" th:text="${question.title}"></h4>
                     <span th:text="${question.description}"></span><br>
                     <span class="text-desc">[[${question.commentCount}]]件返事• [[${question.viewCount}]] 回ブラウズ • [[${#dates.format(question.gmtCreate,'yyyy-MM-dd HH:mm')}]]</span>
                 </div>
             </div>
+            <nav aria-label="Page navigation">
+                <ul class="pagination">
+                    <li th:if="${questionList.showFirstPage}">
+                        <a th:href="@{/(pageNo=1)}" aria-label="Previous">
+                            <span aria-hidden="true">&lt;&lt;</span>
+                        </a>
+                    </li>
+                    <li th:if="${questionList.showPrevious}">
+                        <a th:href="@{/(page=${questionList.pageNo - 1})}"
+                           aria-label="Previous">
+                            <span aria-hidden="true">&lt;</span>
+                        </a>
+                    </li>
+
+                    <li th:each="pageNo : ${questionList.pages}" th:class="${questionList.pageNo == pageNo}? 'active' : ''">
+                        <a th:href="@{/(pageNo=${pageNo})}" th:text="${pageNo}"></a>
+                    </li>
+
+                    <li th:if="${questionList.showNext}">
+                        <a th:href="@{/(pageNo=${questionList.pageNo +1})}"
+                           aria-label="Previous">
+                            <span aria-hidden="true">&gt;</span>
+                        </a>
+                    </li>
+                    <li th:if="${questionList.showEndPage}">
+                        <a th:href="@{/(pageNo=${questionList.totalPage})}"
+                           aria-label="Previous">
+                            <span aria-hidden="true">&gt;&gt;</span>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
         </div>
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12 ">
         </div>
