--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -3,20 +3,20 @@
       xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>syzフォーラム</title>
-    <script src="js/jquery-1.8.3.js"></script>
-    <script src="js/jquery-3.5.1.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="css/community.css">
+    <title th:text="${sectionName}"></title>
+    <script src="/js/jquery-1.8.3.js"></script>
+    <script src="/js/jquery-3.5.1.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="/css/community.css">
 </head>
 <body>
 <div th:insert="navigation :: nav"></div>
-<div class="container-fluid main">
+<div class="container-fluid main profile">
     <div class="row">
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12 ">
-            <h2><span class="glyphicon glyphicon-list" aria-hidden="true"></span> 発見</h2>
+            <h2><span th:text="${sectionName}"></span></h2>
             <hr>
             <div class="media" th:each="question:${questionList.data}">
                 <div class="media-left">
@@ -26,36 +26,35 @@
                 </div>
                 <div class="media-body">
                     <h4 class="media-heading" th:text="${question.title}"></h4>
-                    <span th:text="${question.description}"></span><br>
                     <span class="text-desc">[[${question.commentCount}]]件返事• [[${question.viewCount}]] 回ブラウズ • [[${#dates.format(question.gmtCreate,'yyyy-MM-dd HH:mm')}]]</span>
                 </div>
             </div>
             <nav aria-label="Page navigation">
                 <ul class="pagination">
                     <li th:if="${questionList.showFirstPage}">
-                        <a th:href="@{/(pageNo=1)}" aria-label="Previous">
+                        <a th:href="@{/profile/{section}/(section=${section},pageNo=1)}" aria-label="Previous">
                             <span aria-hidden="true">&lt;&lt;</span>
                         </a>
                     </li>
                     <li th:if="${questionList.showPrevious}">
-                        <a th:href="@{/(pageNo=${questionList.pageNo - 1})}"
+                        <a th:href="@{/profile/{section}/(section=${section},pageNo=${questionList.pageNo - 1})}"
                            aria-label="Previous">
                             <span aria-hidden="true">&lt;</span>
                         </a>
                     </li>
 
                     <li th:each="pageNo : ${questionList.pages}" th:class="${questionList.pageNo == pageNo}? 'active' : ''">
-                        <a th:href="@{/(pageNo=${pageNo})}" th:text="${pageNo}"></a>
+                        <a th:href="@{/profile/{section}/(section=${section},pageNo=${pageNo})}" th:text="${pageNo}"></a>
                     </li>
 
                     <li th:if="${questionList.showNext}">
-                        <a th:href="@{/(pageNo=${questionList.pageNo +1})}"
+                        <a th:href="@{/profile/{section}/(section=${section},pageNo=${questionList.pageNo +1})}"
                            aria-label="Previous">
                             <span aria-hidden="true">&gt;</span>
                         </a>
                     </li>
                     <li th:if="${questionList.showEndPage}">
-                        <a th:href="@{/(pageNo=${questionList.totalPage})}"
+                        <a th:href="@{/profile/{section}/(section=${section},pageNo=${questionList.totalPage})}"
                            aria-label="Previous">
                             <span aria-hidden="true">&gt;&gt;</span>
                         </a>
@@ -64,7 +63,10 @@
             </nav>
         </div>
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12 ">
-            <h4>热门标签</h4>
+            <div class="list-group section">
+                <a href="/profile/questions" th:class="${section}=='questions'?'list-group-item active':'list-group-item'">私の質問</a>
+                <a href="/profile/replies" th:class="${section}=='replies'?'list-group-item active':'list-group-item'">最新回答</a>
+            </div>
         </div>
     </div>
 </div>
