--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -1,23 +1,33 @@
-body{
-   background-color: #efefef;
+body {
+    background-color: #efefef;
 }
-.main{
-   background-color: white;
-   margin: 30px;
+
+.main {
+    background-color: white;
+    margin: 30px;
 }
-.btn-publish{
-   float: right;
-   margin-bottom:15px;
+
+.btn-publish {
+    float: right;
+    margin-bottom: 15px;
 }
-.media-object{
-   width: 38px;
-   height: 38px;
+
+.media-object {
+    width: 38px;
+    height: 38px;
 }
+
 .text-desc {
-   font-size: 12px;
-   font-weight: normal;
-   color: #999;
+    font-size: 12px;
+    font-weight: normal;
+    color: #999;
 }
-.profile .section{
-   margin-top: 15px;
+
+.profile .section {
+    margin-top: 15px;
+}
+
+.community-menu {
+    color: #999999;
+    font-size: 12px;
 }
