--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <title>syzフォーラム</title>
-    <script src="js/jquery-1.8.3.js"></script>
-    <script src="js/jquery-3.5.1.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="css/community.css">
+    <script src="/js/jquery-1.8.3.js"></script>
+    <script src="/js/jquery-3.5.1.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="/css/community.css">
 </head>
 <body>
 <div th:insert="navigation :: nav"></div>
@@ -19,6 +19,7 @@
             <h2><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> 提出</h2>
             <hr>
             <form action="/publish" method="post">
+                <input type="hidden" name="id" th:value="${id}">
                 <div class="form-group">
                     <label for="title">タイトル(概要)：</label>
                     <input type="text" id="title" name="title" class="form-control" placeholder="質問タイトル"
