--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -20,7 +20,7 @@
             <span class="text-desc">提出者：[[${question.user.name}]] | 発表時間：[[${#dates.format(question.gmtCreate,'yyyy-MM-dd')}]] | [[${question.viewCount}]] 回ブラウズ</span>
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " th:text="${question.description}"></div>
             <hr>
-            <a th:href="@{/publish/{id}(id=${question.id})} " class="community-menu" th:if="${session.user!=null && session.user.accountId==question.creator}">
+            <a th:href="@{/publish/{id}(id=${question.id})} " class="community-menu" th:if="${session.user!=null && session.user.id==question.creator}">
                 <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                 編集</a>
         </div>
@@ -45,5 +45,6 @@
             </div>
         </div>
     </div>
+</div>
 </body>
 </html>
