--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -16,7 +16,9 @@ body {
     width: 38px;
     height: 38px;
 }
-
+.media-body {
+    padding: 10px;
+}
 .text-desc {
     font-size: 12px;
     font-weight: normal;
@@ -33,4 +35,11 @@ body {
 }
 .jumbotron{
     margin: 30px;
+}
+.comment{
+    margin: 10px 0;
+}
+.btn-comment{
+    float: right;
+    margin-bottom: 10px;
 }
