--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -7,6 +7,7 @@
     <script src="/js/jquery-1.8.3.js"></script>
     <script src="/js/jquery-3.5.1.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
+    <script src="/js/community.js"></script>
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="/css/community.css">
@@ -16,13 +17,35 @@
 <div class="container-fluid main profile">
     <div class="row">
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12 ">
-            <h4><span th:text="${question.title}"></span></h4>
-            <span class="text-desc">提出者：[[${question.user.name}]] | 発表時間：[[${#dates.format(question.gmtCreate,'yyyy-MM-dd')}]] | [[${question.viewCount}]] 回ブラウズ</span>
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " th:text="${question.description}"></div>
-            <hr>
-            <a th:href="@{/publish/{id}(id=${question.id})} " class="community-menu" th:if="${session.user!=null && session.user.id==question.creator}">
-                <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                編集</a>
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
+                <h4><span th:text="${question.title}"></span></h4>
+                <span class="text-desc">提出者：[[${question.user.name}]] | 発表時間：[[${#dates.format(question.gmtCreate,'yyyy-MM-dd')}]] | [[${question.viewCount}]] 回ブラウズ</span>
+                <hr>
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " th:text="${question.description}"></div>
+                <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
+                <a th:href="@{/publish/{id}(id=${question.id})} " class="community-menu"
+                   th:if="${session.user!=null && session.user.id==question.creator}">
+                    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+                    編集</a>
+            </div>
+            <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " id="comment_section">
+                <div class="media">
+                    <div class="media-left">
+                        <a href="#">
+                            <img class="media-object img-rounded" th:src="${question.user.avatarUrl}">
+                        </a>
+                    </div>
+                    <div class="media-body">
+                        <h6 class="media-heading">
+                            <span th:text="${question.user.name}"></span><br>
+                        </h6>
+                    </div>
+                </div>
+                <input type="hidden" id="question_id" th:value="${question.id}">
+                <textarea class="form-control comment" id="comment_content" rows="6"></textarea>
+                <button type="button" class="btn btn-success btn-comment" onclick="post()">回答</button>
+            </div>
         </div>
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12 ">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
