--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -29,9 +29,15 @@ body {
     margin-top: 15px;
 }
 
+.question-title{
+    margin-top: 25px;
+}
+
 .community-menu {
+    display: block;
     color: #999999;
-    font-size: 12px;
+    font-size: 13px;
+    margin-bottom: 15px;
 }
 .jumbotron{
     margin: 30px;
@@ -39,7 +45,40 @@ body {
 .comment{
     margin: 10px 0;
 }
+.comments{
+    padding-bottom: 5px;
+    margin-bottom: 15px;
+    border-bottom: 1px solid #eee;
+}
+.sub-comments{
+    border-radius: 5px;
+    margin-top: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #eee;
+    padding-top: 15px;
+}
+
 .btn-comment{
     float: right;
-    margin-bottom: 10px;
+    margin: 10px 0;
+}
+.comment-sp{
+    margin-top: 0;
+}
+.comment-count{
+    margin-top: 30px;
+}
+.menu{
+    color: #999;
+}
+.menu .icon{
+    margin-right: 6px;
+    font-size: 15px;
+    cursor: pointer;
+}
+.menu .active{
+    color: #499ef3;
+}
+.menu .icon:hover{
+    color: #499ef3;
 }
