--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -13,38 +13,101 @@
     <link rel="stylesheet" href="/css/community.css">
 </head>
 <body>
-<div th:insert="navigation :: nav"></div>
+<div id="navigation" th:insert="navigation :: nav"></div>
 <div class="container-fluid main profile">
     <div class="row">
-        <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12 ">
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
-                <h4><span th:text="${question.title}"></span></h4>
+        <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
+
+            <!--質問内容-->
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <h3 class="question-title"><span th:text="${question.title}"></span></h3>
                 <span class="text-desc">提出者：[[${question.user.name}]] | 発表時間：[[${#dates.format(question.gmtCreate,'yyyy-MM-dd')}]] | [[${question.viewCount}]] 回ブラウズ</span>
-                <hr>
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " th:text="${question.description}"></div>
-                <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
+                <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" th:text="${question.description}"></div>
+                <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12 comment-sp">
+            </div>
+            <!--コメント-->
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <a th:href="@{/publish/{id}(id=${question.id})} " class="community-menu"
                    th:if="${session.user!=null && session.user.id==question.creator}">
                     <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
                     編集</a>
-            </div>
-            <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " id="comment_section">
-                <div class="media">
-                    <div class="media-left">
-                        <a href="#">
-                            <img class="media-object img-rounded" th:src="${question.user.avatarUrl}">
-                        </a>
-                    </div>
-                    <div class="media-body">
-                        <h6 class="media-heading">
-                            <span th:text="${question.user.name}"></span><br>
-                        </h6>
+                <h4>[[${question.commentCount}]]個コメント</h4>
+                <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 comments" th:each="comment:${commentList}">
+                    <div class="media">
+                        <div class="media-left">
+                            <a href="#">
+                                <img class="media-object img-rounded" th:src="${comment.user.avatarUrl}">
+                            </a>
+                        </div>
+                        <div class="media-body">
+                            <h6 class="media-heading">
+                                <span th:text="${comment.user.name}"></span><br>
+                            </h6>
+                            <div th:text="${comment.content}"></div>
+                            <div class="menu">
+                                <span class="glyphicon glyphicon-thumbs-up icon"></span>
+                                <span class="glyphicon glyphicon-comment icon" th:id="'commentBtn-'+${comment.id}"
+                                      th:data-id="${comment.id}" onclick="collapseComments(this)"></span>
+                                <span class="text-desc pull-right">[[${#dates.format(comment.gmtCreate,'yyyy-MM-dd')}]]</span>
+                            </div>
+                            <!--二級コメント-->
+                            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 sub-comments collapse"
+                                 th:id="'comment-'+${comment.id}">
+                                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 comments"
+                                     th:each="comment:${commentList}">
+                                    <div class="media">
+                                        <div class="media-left">
+                                            <a href="#">
+                                                <img class="media-object img-rounded"
+                                                     th:src="${comment.user.avatarUrl}">
+                                            </a>
+                                        </div>
+                                        <div class="media-body">
+                                            <h6 class="media-heading">
+                                                <span th:text="${comment.user.name}"></span><br>
+                                            </h6>
+                                            <div th:text="${comment.content}"></div>
+                                            <div class="menu">
+                                                <span class="text-desc pull-right">[[${#dates.format(comment.gmtCreate,'yyyy-MM-dd')}]]</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
+                                    <input type="text" class="form-control" placeholder="Text input">
+                                    <button type="button" class="btn btn-success btn-comment">回答</button>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                <input type="hidden" id="question_id" th:value="${question.id}">
-                <textarea class="form-control comment" id="comment_content" rows="6"></textarea>
-                <button type="button" class="btn btn-success btn-comment" onclick="post()">回答</button>
+                <!--コメント入力場所-->
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
+                    <h4>
+                        <span>コメントする</span>
+                    </h4>
+                    <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12 comment-sp">
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 " id="comment_section">
+                        <div class="media">
+                            <div class="media-left">
+                                <a href="#">
+                                    <img class="media-object img-rounded" th:src="${question.user.avatarUrl}">
+                                </a>
+                            </div>
+                            <div class="media-body">
+                                <h6 class="media-heading">
+                                    <span th:text="${question.user.name}"></span><br>
+                                </h6>
+                            </div>
+                        </div>
+                        <input type="hidden" id="question_id" th:value="${question.id}">
+                        <textarea class="form-control comment" id="comment_content" rows="6"></textarea>
+                        <button type="button" class="btn btn-success btn-comment" onclick="post()">回答</button>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12 ">
@@ -70,4 +133,9 @@
     </div>
 </div>
 </body>
+<script type="text/javascript">
+    setInterval(function () {
+        $("#navigation").load(location.href + " #navigation>*", "");
+    }, 1000);
+</script>
 </html>
