--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -8,6 +8,7 @@
     <script src="/js/jquery-3.5.1.min.js"></script>
     <script src="/js/bootstrap.min.js"></script>
     <script src="/js/community.js"></script>
+    <script src="/js/moment.js"></script>
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/bootstrap-theme.min.css">
     <link rel="stylesheet" href="/css/community.css">
@@ -56,26 +57,6 @@
                             <!--二級コメント-->
                             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 sub-comments collapse"
                                  th:id="'comment-'+${comment.id}">
-                                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 comments"
-                                     th:each="comment:${commentList}">
-                                    <div class="media">
-                                        <div class="media-left">
-                                            <a href="#">
-                                                <img class="media-object img-rounded"
-                                                     th:src="${comment.user.avatarUrl}">
-                                            </a>
-                                        </div>
-                                        <div class="media-body">
-                                            <h6 class="media-heading">
-                                                <span th:text="${comment.user.name}"></span><br>
-                                            </h6>
-                                            <div th:text="${comment.content}"></div>
-                                            <div class="menu">
-                                                <span class="text-desc pull-right">[[${#dates.format(comment.gmtCreate,'yyyy-MM-dd')}]]</span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
                                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
                                     <input type="text" class="form-control" placeholder="コメント" th:id="'input-'+${comment.id}">
                                     <button type="button" class="btn btn-success btn-comment" th:data-id="${comment.id}" onclick="comment(this)">回答</button>
