--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -33,6 +33,18 @@ body {
     margin-top: 25px;
 }
 
+.question-tag{
+    margin-right: 5px;
+}
+
+.question-related{
+    line-height: 20px;
+    font-size: 12px;
+    margin-left: 0;
+    list-style: none;
+    padding-left: 0;
+}
+
 .community-menu {
     display: block;
     color: #999999;
@@ -75,6 +87,7 @@ body {
     margin-right: 6px;
     font-size: 15px;
     cursor: pointer;
+    display: inline-flex;
 }
 .menu .active{
     color: #499ef3;
