--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -26,14 +26,22 @@
                 <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" th:text="${question.description}"></div>
                 <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <span class="label label-info question-tag" th:each="tag:${question.tag.split(',')}">
+                       <span class="glyphicon glyphicon-tags"></span>
+                       <span class="label label-info" th:text="${tag}"></span>
+                    </span>
+                </div>
                 <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12 comment-sp">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <a th:href="@{/publish/{id}(id=${question.id})} " class="community-menu"
+                       th:if="${session.user!=null && session.user.id==question.creator}">
+                        <span class="glyphicon glyphicon-pencil" aria-hidden="true">編集</span>
+                    </a>
+                </div>
             </div>
             <!--コメント-->
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <a th:href="@{/publish/{id}(id=${question.id})} " class="community-menu"
-                   th:if="${session.user!=null && session.user.id==question.creator}">
-                    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
-                    編集</a>
                 <h4>[[${question.commentCount}]]個コメント</h4>
                 <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 comments" th:each="comment:${commentList}">
@@ -51,15 +59,18 @@
                             <div class="menu">
                                 <span class="glyphicon glyphicon-thumbs-up icon"></span>
                                 <span class="glyphicon glyphicon-comment icon" th:id="'commentBtn-'+${comment.id}"
-                                      th:data-id="${comment.id}" onclick="collapseComments(this)"></span>
+                                      th:data-id="${comment.id}" onclick="collapseComments(this)">[[${comment.commentCount}]]</span>
                                 <span class="text-desc pull-right">[[${#dates.format(comment.gmtCreate,'yyyy-MM-dd')}]]</span>
                             </div>
                             <!--二級コメント-->
                             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 sub-comments collapse"
                                  th:id="'comment-'+${comment.id}">
                                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
-                                    <input type="text" class="form-control" placeholder="コメント" th:id="'input-'+${comment.id}">
-                                    <button type="button" class="btn btn-success btn-comment" th:data-id="${comment.id}" onclick="comment(this)">回答</button>
+                                    <input type="text" class="form-control" placeholder="コメント"
+                                           th:id="'input-'+${comment.id}">
+                                    <button type="button" class="btn btn-success btn-comment" th:data-id="${comment.id}"
+                                            onclick="comment(this)">回答
+                                    </button>
                                 </div>
                             </div>
                         </div>
@@ -106,8 +117,14 @@
                         </h6>
                     </div>
                 </div>
+                <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 ">
-                    <h4></h4>
+                    <h4>こういう問題を探していますか？</h4>
+                    <ul class="question-related">
+                        <li th:each="related:${relatedQuestions}">
+                            <a th:href="@{/question/{id}(id=${related.id})}" th:text="${related.title}"></a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </div>
