--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -42,7 +42,9 @@ body {
     padding-top:10px;
 }
 .publish-tag-tab .label-info{
-    margin-right: 10px;
+    white-space: normal;
+    margin: 5px 5px;
+    display: inline-flex;
 }
 
 .question-related{
@@ -54,7 +56,6 @@ body {
 }
 
 .community-menu {
-    display: block;
     color: #999999;
     font-size: 13px;
     margin-bottom: 15px;
