--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -28,6 +28,7 @@
                     <li th:if="${session.user!=null}">
                         <a href="/publish"><span>質問する</span></a>
                     </li>
+                    <li><a href="/profile/replies">メッセージ<span class="badge">42</span></a></li>
                     <li class="dropdown" th:if="${session.user!=null}">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                            aria-expanded="false">[[${session.user.getName()}]]<span class="caret"></span></a>
