--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -41,17 +41,19 @@
                     >
                     <div id="select-tag" class="publish-tag-tab">
                         <ul class="nav nav-tabs" role="tablist">
-                            <li role="presentation"  th:each="selectCategory:${tags}">
+                            <li role="presentation"  th:each="selectCategory,selectCategoryStat:${tags}"
+                            th:class="${selectCategoryStat.first ? 'active':''}">
                                 <a th:href="${'#'+  selectCategory.categoryName}" aria-controls="home" role="tab"
                                    data-toggle="tab" th:text="${selectCategory.categoryName}"></a>
                             </li>
                         </ul>
                         <div class="tab-content" onclick="hideSelectTag()">
                             <div role="tabpanel" class="tab-pane" th:id="${selectCategory.categoryName}"
-                                 th:each="selectCategory: ${tags}">
+                                 th:each="selectCategory: ${tags}"
+                                 th:class="${selectCategoryStat.first ? 'tab-pane active':'tab-pane'}">
                                 <span class="label label-info " th:each="tag:${selectCategory.tags}">
                                     <span class="glyphicon glyphicon-tags" onclick="selectTag(this)"
-                                          th:data-tag="${tag}">[[${tag}]]</span>
+                                          th:data-tag="${tag}"> [[${tag}]]</span>
                                 </span>
                             </div>
                         </div>
