--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -30,20 +30,21 @@
                            th:value="${title}">
                 </div>
                 <div class="form-group">
-                    <label for="description">質問内容(必須、右側のガイドを参照)：</label>
-                    <textarea id="description" name="description" class="form-control"
+                    <label for="summernote">質問内容(必須、右側のガイドを参照)：</label>
+                    <textarea id="summernote" name="description" class="form-control"
                               th:text="${description}"></textarea>
-                    <script>
-                        $(document).ready(function () {
-                            $('#description').summernote({
-                                height: 300,
-                                minHeight: null,
-                                maxHeight: null,
-                                focus: true
-                            });
-                        });
-                    </script>
                 </div>
+                <script>
+                    $('#summernote').summernote({
+                        height: 300,
+                        minHeight: null,
+                        maxHeight: null,
+                        focus: true,
+                        onImageLinkInsert: function(files, editor, welEditable) {
+                            saveFile(files[0], editor, welEditable);
+                        }
+                    });
+                </script>
                 <div class="form-group">
                     <label for="tag">タグ：</label>
                     <input type="text" id="tag" name="tag" class="form-control" placeholder="タグを入力してください。"
