--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -27,10 +27,10 @@
                 <span class="text-desc">提出者：[[${question.user.name}]] | 発表時間：[[${#dates.format(question.gmtCreate,'yyyy-MM-dd')}]] | [[${question.viewCount}]] 回ブラウズ</span>
                 <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" >
-                    <textarea id="description" th:text="${question.description}"></textarea>
+                    <textarea id="summernote" th:text="${question.description}"></textarea>
                     <script>
                         $(document).ready(function () {
-                            $('#description').summernote('disable');
+                            $('#summernote').summernote("disable");
                         });
                     </script>
                 </div>
