--- a/src/main/resources/static/css/community.css
+++ b/src/main/resources/static/css/community.css
@@ -104,3 +104,10 @@ footer body {
 .menu .icon:hover{
     color: #499ef3;
 }
+.btn-delete{
+    margin-left: 1px;
+    font-size: 12px;
+    height: 30px;
+    width: 60px;
+}
+
